--- a/Test Rosenbrock 50-100.ipynb
+++ b/Test Rosenbrock 50-100.ipynb
@@ -142,7 +142,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [07:26<00:00,  2.24it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [06:46<00:00,  2.46it/s]\n"
      ]
     },
     {
@@ -151,20 +151,20 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1.000000e+03            1000.0   1000.000000\n",
-      "mean   1.749760e+12               0.0      0.444746\n",
-      "std    9.192323e+12               0.0      0.384930\n",
-      "min    5.592422e+02               0.0      0.258227\n",
-      "25%    7.800283e+02               0.0      0.324432\n",
-      "50%    8.790679e+02               0.0      0.366624\n",
-      "75%    9.952545e+02               0.0      0.438231\n",
-      "max    4.999513e+13               0.0      7.889956\n",
+      "mean   1.749761e+12               0.0      0.403884\n",
+      "std    9.192329e+12               0.0      0.166594\n",
+      "min    5.558174e+02               0.0      0.245428\n",
+      "25%    7.700089e+02               0.0      0.310472\n",
+      "50%    8.632258e+02               0.0      0.353868\n",
+      "75%    9.996323e+02               0.0      0.414785\n",
+      "max    4.999519e+13               0.0      1.257725\n",
       "Number of infeasible solution: 0\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
     "    # solve\n",
@@ -194,7 +194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "id": "160d5677-c861-486f-9533-852d43f971bf",
    "metadata": {},
    "outputs": [],
@@ -207,7 +207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "536d2d58-67ba-408a-b72a-7c5bd54a5ff4",
    "metadata": {},
    "outputs": [],
@@ -222,7 +222,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "id": "fee1241e-e53a-4cbb-927a-edcdb3537303",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "e4f10263-5f69-4288-a4e8-8be83929c8d6",
    "metadata": {},
    "outputs": [
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "id": "3e835084-eb75-45d9-bcbd-5fb4c613fb41",
    "metadata": {},
    "outputs": [
@@ -332,7 +332,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:16<00:00, 61.71it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:18<00:00, 53.46it/s]\n"
      ]
     },
     {
@@ -341,20 +341,20 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    566.171906          0.029956      0.002884\n",
-      "std     204.640706          0.513843      0.000812\n",
-      "min     259.581433          0.000000      0.001000\n",
-      "25%     369.971996          0.000000      0.002217\n",
-      "50%     549.590792          0.000000      0.002999\n",
-      "75%     728.124546          0.000000      0.003193\n",
-      "max    1358.752855         12.362421      0.008658\n",
-      "Number of infeasible solution: 7\n"
+      "mean    568.468975          0.005120      0.003273\n",
+      "std     205.694313          0.101694      0.000969\n",
+      "min     266.924016          0.000000      0.000999\n",
+      "25%     366.757142          0.000000      0.002518\n",
+      "50%     558.681739          0.000000      0.003003\n",
+      "75%     720.295802          0.000000      0.003999\n",
+      "max    1574.572316          2.409778      0.008513\n",
+      "Number of infeasible solution: 3\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
@@ -396,7 +396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "id": "0c4b3d02-3cac-4bce-aaaf-43994ff200d6",
    "metadata": {},
    "outputs": [],
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "id": "d46b9817-87ac-4af0-b387-b10c9a4998f4",
    "metadata": {},
    "outputs": [],
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 16,
    "id": "fa8b147f-39c8-4eb7-bb95-93dd8e4cb1cf",
    "metadata": {},
    "outputs": [],
@@ -450,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 17,
    "id": "c6f5bb17-8c3c-4dcd-952d-caa1d7c4c4fa",
    "metadata": {},
    "outputs": [
@@ -522,7 +522,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 18,
    "id": "6584d57e-6b4c-4262-82f5-55735ef17cac",
    "metadata": {},
    "outputs": [
@@ -530,7 +530,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:19<00:00, 52.05it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:15<00:00, 63.03it/s]\n"
      ]
     },
     {
@@ -539,20 +539,20 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean    639.705636          0.002873      0.003336\n",
-      "std     129.252851          0.090847      0.001047\n",
-      "min     416.801831          0.000000      0.001504\n",
-      "25%     551.017653          0.000000      0.002522\n",
-      "50%     612.712141          0.000000      0.003006\n",
-      "75%     682.096726          0.000000      0.004000\n",
-      "max    1061.078556          2.872840      0.012975\n",
+      "mean    639.164363          0.011845      0.002797\n",
+      "std     138.688235          0.374560      0.000703\n",
+      "min     417.931821          0.000000      0.000999\n",
+      "25%     545.062545          0.000000      0.002113\n",
+      "50%     608.273523          0.000000      0.002994\n",
+      "75%     689.761520          0.000000      0.003030\n",
+      "max    1598.102928         11.844629      0.006236\n",
       "Number of infeasible solution: 1\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
