--- a/Test Rosenbrock 50-1000.ipynb
+++ b/Test Rosenbrock 50-1000.ipynb
@@ -175,7 +175,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
     "    # solve\n",
@@ -373,7 +373,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:34<00:00,  6.47it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:20<00:00,  7.11it/s]\n"
      ]
     },
     {
@@ -382,20 +382,20 @@
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
       "count   1000.000000       1000.000000   1000.000000\n",
-      "mean    6650.374215          1.307318      0.019679\n",
-      "std     1120.364047         11.214535      0.002546\n",
-      "min     3792.878020          0.000000      0.003506\n",
-      "25%     6100.835013          0.000000      0.019606\n",
-      "50%     6499.965338          0.000000      0.020024\n",
-      "75%     7239.633277          0.000000      0.020530\n",
-      "max    11121.786878        177.610756      0.023118\n",
-      "Number of infeasible solution: 21\n"
+      "mean    6582.978163          1.480609      0.019505\n",
+      "std     1158.338777         13.330386      0.002189\n",
+      "min     3679.906313          0.000000      0.002999\n",
+      "25%     6006.437204          0.000000      0.019407\n",
+      "50%     6478.407532          0.000000      0.019735\n",
+      "75%     7237.348265          0.000000      0.020064\n",
+      "max    10134.087528        210.346674      0.022971\n",
+      "Number of infeasible solution: 17\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
@@ -598,7 +598,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:24<00:00,  6.90it/s]\n"
+      "100%|██████████████████████████████████████████████████████████████████████████████| 1000/1000 [02:27<00:00,  6.76it/s]\n"
      ]
     },
     {
@@ -606,21 +606,21 @@
      "output_type": "stream",
      "text": [
       "            Obj Val  Constraints Viol  Elapsed Time\n",
-      "count   1000.000000       1000.000000   1000.000000\n",
-      "mean    6195.200172          1.821974      0.019639\n",
-      "std     1562.808182         21.032867      0.002739\n",
-      "min     3965.215929          0.000000      0.003000\n",
-      "25%     4878.100643          0.000000      0.019650\n",
-      "50%     5876.587116          0.000000      0.020029\n",
-      "75%     7376.366106          0.000000      0.020485\n",
-      "max    11598.931829        450.352139      0.034322\n",
-      "Number of infeasible solution: 19\n"
+      "count  1.000000e+03       1000.000000   1000.000000\n",
+      "mean   5.169267e+06        192.738706      0.019632\n",
+      "std    1.632726e+08       6063.378295      0.002262\n",
+      "min    3.970432e+03          0.000000      0.003014\n",
+      "25%    4.832398e+03          0.000000      0.019511\n",
+      "50%    5.733512e+03          0.000000      0.019921\n",
+      "75%    7.327600e+03          0.000000      0.020318\n",
+      "max    5.163139e+09     191741.622170      0.022856\n",
+      "Number of infeasible solution: 17\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
