--- a/Test Rosenbrock 50-2.ipynb
+++ b/Test Rosenbrock 50-2.ipynb
@@ -145,7 +145,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model.set_param_val({\"p\":p, \"a\":a})\n",
     "    # solve\n",
@@ -215,7 +215,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model.set_param_val({\"p\":p, \"a\":a})\n",
     "    # relax\n",
@@ -288,7 +288,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model.set_param_val({\"p\":p, \"a\":a})\n",
     "    # relax\n",
@@ -361,7 +361,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
     "    # solve\n",
@@ -431,7 +431,7 @@
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_test,a_test))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # set params\n",
     "    model_heur.set_param_val({\"p\":p, \"a\":a})\n",
     "    # solve\n",
@@ -480,7 +480,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 50   # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 64            # width of hidden layers for solution mapping\n",
@@ -511,7 +511,7 @@
     "                       int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -524,71 +524,65 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 303.71\n",
-      "Epoch 1, Validation Loss: 92.03\n",
-      "Epoch 2, Validation Loss: 52.17\n",
-      "Epoch 3, Validation Loss: 45.01\n",
-      "Epoch 4, Validation Loss: 50.81\n",
-      "Epoch 5, Validation Loss: 36.92\n",
-      "Epoch 6, Validation Loss: 21.07\n",
-      "Epoch 7, Validation Loss: 27.76\n",
-      "Epoch 8, Validation Loss: 20.27\n",
-      "Epoch 9, Validation Loss: 25.97\n",
-      "Epoch 10, Validation Loss: 16.07\n",
-      "Epoch 11, Validation Loss: 15.61\n",
-      "Epoch 12, Validation Loss: 15.82\n",
-      "Epoch 13, Validation Loss: 14.58\n",
-      "Epoch 14, Validation Loss: 13.62\n",
-      "Epoch 15, Validation Loss: 12.46\n",
-      "Epoch 16, Validation Loss: 13.74\n",
-      "Epoch 17, Validation Loss: 16.07\n",
-      "Epoch 18, Validation Loss: 12.02\n",
-      "Epoch 19, Validation Loss: 13.10\n",
-      "Epoch 20, Validation Loss: 12.39\n",
-      "Epoch 21, Validation Loss: 12.06\n",
-      "Epoch 22, Validation Loss: 11.87\n",
-      "Epoch 23, Validation Loss: 12.96\n",
-      "Epoch 24, Validation Loss: 14.53\n",
-      "Epoch 25, Validation Loss: 19.63\n",
-      "Epoch 26, Validation Loss: 11.11\n",
-      "Epoch 27, Validation Loss: 11.08\n",
-      "Epoch 28, Validation Loss: 13.50\n",
-      "Epoch 29, Validation Loss: 11.99\n",
-      "Epoch 30, Validation Loss: 13.62\n",
-      "Epoch 31, Validation Loss: 14.58\n",
-      "Epoch 32, Validation Loss: 15.33\n",
-      "Epoch 33, Validation Loss: 15.62\n",
-      "Epoch 34, Validation Loss: 12.05\n",
-      "Epoch 35, Validation Loss: 13.21\n",
-      "Epoch 36, Validation Loss: 12.80\n",
-      "Epoch 37, Validation Loss: 11.94\n",
-      "Epoch 38, Validation Loss: 12.42\n",
-      "Epoch 39, Validation Loss: 15.51\n",
-      "Epoch 40, Validation Loss: 11.72\n",
-      "Epoch 41, Validation Loss: 12.13\n",
-      "Epoch 42, Validation Loss: 12.07\n",
-      "Epoch 43, Validation Loss: 14.03\n",
-      "Epoch 44, Validation Loss: 10.01\n",
-      "Epoch 45, Validation Loss: 14.06\n",
-      "Epoch 46, Validation Loss: 12.54\n",
-      "Epoch 47, Validation Loss: 10.41\n",
-      "Epoch 48, Validation Loss: 13.57\n",
-      "Epoch 49, Validation Loss: 12.24\n",
-      "Epoch 50, Validation Loss: 11.82\n",
-      "Epoch 51, Validation Loss: 13.72\n",
-      "Epoch 52, Validation Loss: 13.89\n",
-      "Epoch 53, Validation Loss: 14.07\n",
-      "Epoch 54, Validation Loss: 12.44\n",
-      "Epoch 55, Validation Loss: 11.92\n",
-      "Epoch 56, Validation Loss: 11.75\n",
-      "Epoch 57, Validation Loss: 11.48\n",
-      "Epoch 58, Validation Loss: 13.85\n",
-      "Epoch 59, Validation Loss: 12.98\n",
-      "Epoch 60, Validation Loss: 10.92\n",
-      "Epoch 61, Validation Loss: 12.57\n",
-      "Epoch 62, Validation Loss: 15.77\n",
-      "Epoch 63, Validation Loss: 11.66\n",
-      "Early stopping at epoch 63\n",
+      "Epoch 0, Validation Loss: 427.44\n",
+      "Epoch 1, Validation Loss: 53.24\n",
+      "Epoch 2, Validation Loss: 42.29\n",
+      "Epoch 3, Validation Loss: 25.55\n",
+      "Epoch 4, Validation Loss: 42.81\n",
+      "Epoch 5, Validation Loss: 28.09\n",
+      "Epoch 6, Validation Loss: 32.80\n",
+      "Epoch 7, Validation Loss: 25.27\n",
+      "Epoch 8, Validation Loss: 26.37\n",
+      "Epoch 9, Validation Loss: 19.75\n",
+      "Epoch 10, Validation Loss: 19.59\n",
+      "Epoch 11, Validation Loss: 18.07\n",
+      "Epoch 12, Validation Loss: 19.79\n",
+      "Epoch 13, Validation Loss: 16.36\n",
+      "Epoch 14, Validation Loss: 14.90\n",
+      "Epoch 15, Validation Loss: 15.16\n",
+      "Epoch 16, Validation Loss: 17.90\n",
+      "Epoch 17, Validation Loss: 16.69\n",
+      "Epoch 18, Validation Loss: 17.75\n",
+      "Epoch 19, Validation Loss: 13.00\n",
+      "Epoch 20, Validation Loss: 19.98\n",
+      "Epoch 21, Validation Loss: 15.70\n",
+      "Epoch 22, Validation Loss: 12.86\n",
+      "Epoch 23, Validation Loss: 14.29\n",
+      "Epoch 24, Validation Loss: 16.42\n",
+      "Epoch 25, Validation Loss: 15.94\n",
+      "Epoch 26, Validation Loss: 17.95\n",
+      "Epoch 27, Validation Loss: 13.27\n",
+      "Epoch 28, Validation Loss: 12.30\n",
+      "Epoch 29, Validation Loss: 12.19\n",
+      "Epoch 30, Validation Loss: 14.39\n",
+      "Epoch 31, Validation Loss: 14.74\n",
+      "Epoch 32, Validation Loss: 13.58\n",
+      "Epoch 33, Validation Loss: 15.48\n",
+      "Epoch 34, Validation Loss: 15.08\n",
+      "Epoch 35, Validation Loss: 12.46\n",
+      "Epoch 36, Validation Loss: 13.25\n",
+      "Epoch 37, Validation Loss: 14.07\n",
+      "Epoch 38, Validation Loss: 11.57\n",
+      "Epoch 39, Validation Loss: 14.89\n",
+      "Epoch 40, Validation Loss: 14.00\n",
+      "Epoch 41, Validation Loss: 12.19\n",
+      "Epoch 42, Validation Loss: 11.66\n",
+      "Epoch 43, Validation Loss: 13.03\n",
+      "Epoch 44, Validation Loss: 12.64\n",
+      "Epoch 45, Validation Loss: 14.29\n",
+      "Epoch 46, Validation Loss: 13.10\n",
+      "Epoch 47, Validation Loss: 14.65\n",
+      "Epoch 48, Validation Loss: 15.91\n",
+      "Epoch 49, Validation Loss: 14.09\n",
+      "Epoch 50, Validation Loss: 14.07\n",
+      "Epoch 51, Validation Loss: 12.57\n",
+      "Epoch 52, Validation Loss: 13.92\n",
+      "Epoch 53, Validation Loss: 13.62\n",
+      "Epoch 54, Validation Loss: 15.61\n",
+      "Epoch 55, Validation Loss: 13.11\n",
+      "Epoch 56, Validation Loss: 13.36\n",
+      "Epoch 57, Validation Loss: 13.78\n",
+      "Early stopping at epoch 57\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -617,7 +611,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 301.94it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 303.58it/s]\n"
      ]
     },
     {
@@ -626,20 +620,20 @@
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
       "count  1000.000000       1000.000000   1000.000000\n",
-      "mean      9.995661          0.000534      0.002539\n",
-      "std       8.719836          0.005044      0.000771\n",
-      "min       0.123875          0.000000      0.001000\n",
-      "25%       4.208906          0.000000      0.002000\n",
-      "50%       7.775329          0.000000      0.002201\n",
-      "75%      13.802355          0.000000      0.003000\n",
-      "max      88.345096          0.074745      0.008233\n",
-      "Number of infeasible solution: 14\n"
+      "mean     12.574289          0.000128      0.002480\n",
+      "std      10.631138          0.002839      0.000745\n",
+      "min       0.320400          0.000000      0.000999\n",
+      "25%       5.449409          0.000000      0.002000\n",
+      "50%      10.111569          0.000000      0.002014\n",
+      "75%      15.626791          0.000000      0.003000\n",
+      "max      62.973297          0.075678      0.011520\n",
+      "Number of infeasible solution: 3\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
@@ -700,7 +694,7 @@
    "outputs": [],
    "source": [
     "# hyperparameters\n",
-    "penalty_weight = 50   # weight of constraint violation penealty\n",
+    "penalty_weight = 80   # weight of constraint violation penealty\n",
     "hlayers_sol = 4       # number of hidden layers for solution mapping\n",
     "hlayers_rnd = 4       # number of hidden layers for solution mapping\n",
     "hsize = 64            # width of hidden layers for solution mapping\n",
@@ -731,7 +725,7 @@
     "                          int_ind=model.int_ind, continuous_update=True, name=\"round\")\n",
     "# build neuromancer problem for rounding\n",
     "components = nn.ModuleList([smap, rnd]).to(\"cuda\")\n",
-    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks)"
+    "loss_fn = nmRosenbrock([\"p\", \"a\", \"x_rnd\"], steepness, num_blocks, penalty_weight)"
    ]
   },
   {
@@ -744,57 +738,66 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 0, Validation Loss: 239.16\n",
-      "Epoch 1, Validation Loss: 50.68\n",
-      "Epoch 2, Validation Loss: 21.10\n",
-      "Epoch 3, Validation Loss: 16.26\n",
-      "Epoch 4, Validation Loss: 19.50\n",
-      "Epoch 5, Validation Loss: 14.03\n",
-      "Epoch 6, Validation Loss: 14.78\n",
-      "Epoch 7, Validation Loss: 13.23\n",
-      "Epoch 8, Validation Loss: 14.42\n",
-      "Epoch 9, Validation Loss: 13.55\n",
-      "Epoch 10, Validation Loss: 13.03\n",
-      "Epoch 11, Validation Loss: 14.14\n",
-      "Epoch 12, Validation Loss: 13.54\n",
-      "Epoch 13, Validation Loss: 13.47\n",
-      "Epoch 14, Validation Loss: 14.77\n",
-      "Epoch 15, Validation Loss: 14.03\n",
-      "Epoch 16, Validation Loss: 12.73\n",
-      "Epoch 17, Validation Loss: 13.18\n",
-      "Epoch 18, Validation Loss: 20.18\n",
-      "Epoch 19, Validation Loss: 11.81\n",
-      "Epoch 20, Validation Loss: 12.48\n",
-      "Epoch 21, Validation Loss: 16.19\n",
-      "Epoch 22, Validation Loss: 11.86\n",
-      "Epoch 23, Validation Loss: 11.65\n",
-      "Epoch 24, Validation Loss: 12.12\n",
-      "Epoch 25, Validation Loss: 12.82\n",
-      "Epoch 26, Validation Loss: 12.83\n",
-      "Epoch 27, Validation Loss: 11.57\n",
-      "Epoch 28, Validation Loss: 15.15\n",
-      "Epoch 29, Validation Loss: 12.40\n",
-      "Epoch 30, Validation Loss: 11.52\n",
-      "Epoch 31, Validation Loss: 11.53\n",
-      "Epoch 32, Validation Loss: 14.54\n",
-      "Epoch 33, Validation Loss: 12.49\n",
-      "Epoch 34, Validation Loss: 12.33\n",
-      "Epoch 35, Validation Loss: 11.71\n",
-      "Epoch 36, Validation Loss: 13.09\n",
-      "Epoch 37, Validation Loss: 11.92\n",
-      "Epoch 38, Validation Loss: 11.98\n",
-      "Epoch 39, Validation Loss: 12.52\n",
-      "Epoch 40, Validation Loss: 12.31\n",
-      "Epoch 41, Validation Loss: 12.54\n",
-      "Epoch 42, Validation Loss: 11.97\n",
-      "Epoch 43, Validation Loss: 12.87\n",
-      "Epoch 44, Validation Loss: 12.79\n",
-      "Epoch 45, Validation Loss: 13.25\n",
-      "Epoch 46, Validation Loss: 12.73\n",
-      "Epoch 47, Validation Loss: 12.18\n",
-      "Epoch 48, Validation Loss: 12.44\n",
-      "Epoch 49, Validation Loss: 12.20\n",
-      "Early stopping at epoch 49\n",
+      "Epoch 0, Validation Loss: 373.49\n",
+      "Epoch 1, Validation Loss: 34.07\n",
+      "Epoch 2, Validation Loss: 19.41\n",
+      "Epoch 3, Validation Loss: 14.42\n",
+      "Epoch 4, Validation Loss: 19.02\n",
+      "Epoch 5, Validation Loss: 15.15\n",
+      "Epoch 6, Validation Loss: 14.07\n",
+      "Epoch 7, Validation Loss: 13.60\n",
+      "Epoch 8, Validation Loss: 13.76\n",
+      "Epoch 9, Validation Loss: 14.13\n",
+      "Epoch 10, Validation Loss: 15.79\n",
+      "Epoch 11, Validation Loss: 15.66\n",
+      "Epoch 12, Validation Loss: 17.20\n",
+      "Epoch 13, Validation Loss: 13.73\n",
+      "Epoch 14, Validation Loss: 16.31\n",
+      "Epoch 15, Validation Loss: 13.36\n",
+      "Epoch 16, Validation Loss: 13.59\n",
+      "Epoch 17, Validation Loss: 13.96\n",
+      "Epoch 18, Validation Loss: 13.49\n",
+      "Epoch 19, Validation Loss: 13.48\n",
+      "Epoch 20, Validation Loss: 13.83\n",
+      "Epoch 21, Validation Loss: 14.23\n",
+      "Epoch 22, Validation Loss: 12.19\n",
+      "Epoch 23, Validation Loss: 13.45\n",
+      "Epoch 24, Validation Loss: 12.49\n",
+      "Epoch 25, Validation Loss: 13.37\n",
+      "Epoch 26, Validation Loss: 16.29\n",
+      "Epoch 27, Validation Loss: 13.13\n",
+      "Epoch 28, Validation Loss: 12.60\n",
+      "Epoch 29, Validation Loss: 12.09\n",
+      "Epoch 30, Validation Loss: 12.86\n",
+      "Epoch 31, Validation Loss: 13.78\n",
+      "Epoch 32, Validation Loss: 12.30\n",
+      "Epoch 33, Validation Loss: 11.90\n",
+      "Epoch 34, Validation Loss: 11.95\n",
+      "Epoch 35, Validation Loss: 11.91\n",
+      "Epoch 36, Validation Loss: 14.41\n",
+      "Epoch 37, Validation Loss: 15.53\n",
+      "Epoch 38, Validation Loss: 13.14\n",
+      "Epoch 39, Validation Loss: 11.81\n",
+      "Epoch 40, Validation Loss: 13.54\n",
+      "Epoch 41, Validation Loss: 11.85\n",
+      "Epoch 42, Validation Loss: 12.02\n",
+      "Epoch 43, Validation Loss: 14.51\n",
+      "Epoch 44, Validation Loss: 12.68\n",
+      "Epoch 45, Validation Loss: 13.53\n",
+      "Epoch 46, Validation Loss: 12.06\n",
+      "Epoch 47, Validation Loss: 12.67\n",
+      "Epoch 48, Validation Loss: 13.60\n",
+      "Epoch 49, Validation Loss: 11.82\n",
+      "Epoch 50, Validation Loss: 12.31\n",
+      "Epoch 51, Validation Loss: 12.73\n",
+      "Epoch 52, Validation Loss: 12.36\n",
+      "Epoch 53, Validation Loss: 11.94\n",
+      "Epoch 54, Validation Loss: 14.04\n",
+      "Epoch 55, Validation Loss: 12.80\n",
+      "Epoch 56, Validation Loss: 14.04\n",
+      "Epoch 57, Validation Loss: 12.81\n",
+      "Epoch 58, Validation Loss: 11.99\n",
+      "Early stopping at epoch 58\n",
       "Best model loaded.\n",
       "Training complete.\n"
      ]
@@ -823,7 +826,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 291.58it/s]\n"
+      "100%|█████████████████████████████████████████████████████████████████████████████| 1000/1000 [00:03<00:00, 298.00it/s]\n"
      ]
     },
     {
@@ -831,21 +834,21 @@
      "output_type": "stream",
      "text": [
       "           Obj Val  Constraints Viol  Elapsed Time\n",
-      "count  1000.000000            1000.0   1000.000000\n",
-      "mean     11.503066               0.0      0.002613\n",
-      "std       7.451873               0.0      0.000857\n",
-      "min       0.170778               0.0      0.001000\n",
-      "25%       6.002040               0.0      0.002000\n",
-      "50%       9.898012               0.0      0.002506\n",
-      "75%      15.414453               0.0      0.003000\n",
-      "max      76.240526               0.0      0.006536\n",
-      "Number of infeasible solution: 0\n"
+      "count  1000.000000       1000.000000   1000.000000\n",
+      "mean     12.263522          0.000441      0.002525\n",
+      "std       8.335746          0.008763      0.000735\n",
+      "min       0.176402          0.000000      0.000998\n",
+      "25%       5.560702          0.000000      0.002000\n",
+      "50%      10.628601          0.000000      0.002503\n",
+      "75%      17.893059          0.000000      0.003000\n",
+      "max      45.152084          0.243059      0.006572\n",
+      "Number of infeasible solution: 6\n"
      ]
     }
    ],
    "source": [
     "params, sols, objvals, conviols, elapseds = [], [], [], [], []\n",
-    "for p, a in tqdm(list(zip(p_dev, a_dev))):\n",
+    "for p, a in tqdm(list(zip(p_test, a_test))):\n",
     "    # data point as tensor\n",
     "    datapoints = {\"p\": torch.tensor(np.array([p]), dtype=torch.float32).to(\"cuda\"), \n",
     "                  \"a\": torch.tensor(np.array([a]), dtype=torch.float32).to(\"cuda\"),\n",
